--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,67 @@
-body {
-  background: url(/img/musica.jpg) center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  font: outline;
+body{
+    background: url(/img/musica.jpg) no-repeat center center fixed;
+    background-size: cover;
 }
 
 .main-section{
-  margin: 0 auto;
-  margin-top: 25%;
-  padding: 0;
+    margin: 0 auto;
+    margin-top: 25%;
+    padding: 0;
 }
 
 .modal-content{
-  background-color: rgb(95, 3, 3);
-  opacity: .90;
-  padding: 0 20px;
-  box-shadow: 0px 0px 3px #848484;
+    background-color: rgb(78, 21, 110);
+    opacity: .80;
+    padding: 0 20px;
+    box-shadow: 0px 0px 3px #848484;
+    
 }
 
 .user-img{
-  margin-top: -50px;
-  margin-bottom: 35px;
+    margin-top: -50px;
+    margin-bottom: 35px;
 }
 
 .user-img img{
-  width: 100px;
-  height: 100px;
-  box-shadow: 0px 0px 3px #848484;
-  border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 0px 3px #848484;
+    border-radius: 50%;
 }
 
 .form-group input{
-  height: 42px;
-  font-size: 18px;
-  border: 0;
-  padding-left: 54px;
-  border-radius: 5px;
+    height: 42px;
+    font-size: 18px;
+    border: 0;
+    padding-left: 54px;
+    border-radius: 5px;
 }
 .form-group::before{
-  font-family: "Font Awesome\ 5 Free";
-  position: absolute;
-  left:28px;
-  font-size: 22px;
-  padding-top: 4px;
-  
+    font-family: "Font Awesome\ 5 Free";
+    position: absolute;
+    left:28px;
+    font-size: 22px;
+    padding-top: 4px;
+    
 }
 
 .form-group#user-group::before{
-  content: "\f007";
+    content: "\f007";
 }
 
 .form-group#contrasena-group::before{
-  content: "\f023";
+    content: "\f023";
 }
 
 button{
-  width: 60%;
-  margin: 5px 0 25px;
+    width: 60%;
+    margin: 5px 0 25px;
 }
 
 .forgot{
-  padding: 5px 0;
+    padding: 5px 0;
 }
 
 .forgot a{
-  color: white;
+    color: white;
 }
